Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-128510

qtest: watchdog doesn't catch timeouts in initTestCase and friends

XMLWordPrintable

    • 5
    • 9154bb8f1 (dev), cc331ef75 (6.8)
    • Foundation PM Staging

      the qtest watchdog should dump a backtrace on CI when initTestCase times out.

      compare: https://codereview.qt-project.org/c/qt/qtmultimedia/+/584916

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            timblechmann tim blechmann
            timblechmann tim blechmann
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes