TestLib: enable watchdog during _data and init/cleanupTestCase

The watchdog is not enabled when running initTestCase and friends. We
therefore miss some deadlocks in these methods.

Task-number: QTBUG-128510
Pick-to: 6.8
Change-Id: I119a1ee04c45df00b62f9d5990075e4bf8814142
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>